--- a/contracts/build.gradle
+++ b/contracts/build.gradle
@@ -17,3 +17,6 @@ dependencies {
     cordaCompile "$corda_core_release_group:corda-core:$corda_core_release_version"
     testCompile "$corda_release_group:corda-node-driver:$corda_release_version"
 }
+test {
+    useJUnitPlatform()
+}
