--- a/workflows/build.gradle
+++ b/workflows/build.gradle
@@ -40,8 +40,8 @@ configurations {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
-    testCompile "junit:junit:$junit_version"
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.4.2")
+    testCompile 'org.junit.jupiter:junit-jupiter:5.6.0'
+    testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.4.2")
 
     // Corda dependencies.
@@ -59,4 +59,7 @@ task integrationTest(type: Test, dependsOn: []) {
 }
 test {
     useJUnitPlatform()
+    if (filter.includePatterns) {
+        forkEvery 1
+    }
 }
