--- a/contracts/build.gradle
+++ b/contracts/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     // Corda dependencies.
     cordaCompile "$corda_core_release_group:corda-core:$corda_core_release_version"
     testCompile "$corda_release_group:corda-node-driver:$corda_release_version"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.7.2"
 }
 test {
     useJUnitPlatform()
