--- a/workflows/build.gradle
+++ b/workflows/build.gradle
@@ -40,9 +40,7 @@ configurations {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
-    testCompile 'org.junit.jupiter:junit-jupiter:5.6.0'
-    testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.4.2")
+    testImplementation "org.junit.jupiter:junit-jupiter:5.7.2"
 
     // Corda dependencies.
     cordaCompile "$corda_core_release_group:corda-core:$corda_core_release_version"
