--- a/workflows/build.gradle
+++ b/workflows/build.gradle
@@ -40,7 +40,7 @@ configurations {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
-    testImplementation "org.junit.jupiter:junit-jupiter:5.7.2"
+    testImplementation "org.junit.jupiter:junit-jupiter:$junit_version"
 
     // Corda dependencies.
     cordaCompile "$corda_core_release_group:corda-core:$corda_core_release_version"
