--- a/build.gradle
+++ b/build.gradle
@@ -129,7 +129,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
     }
     node {
-        name "O=PartyB,L=New York,C=US"
+        name "O=mister matching,L=New York,C=US"
         p2pPort 10008
         rpcSettings {
             address("localhost:10009")
