--- a/workflows/build.gradle
+++ b/workflows/build.gradle
@@ -54,6 +54,7 @@ dependencies {
 task integrationTest(type: Test, dependsOn: []) {
     testClassesDirs = sourceSets.integrationTest.output.classesDirs
     classpath = sourceSets.integrationTest.runtimeClasspath
+    useJUnitPlatform()
 }
 test {
     useJUnitPlatform()
